Issue #27343: Fixed error message for conflicting initializers of ctypes.Structure.